# pas_in_peace

./: .env.example  .env.production.example  .env.test  .gitignore  .vercelignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_FIXES.md  ARCHITECTURE_REVIEW.md  CLEANUP_BRANCHES_GUIDE.md  COMMIT_NOTES.md  COMPARISON_BESSER_vs_PAS.md  CURRENT_STATUS.md  DEPLOYMENT_MAC_INSTRUCTIONS.md  DEPLOYMENT_READINESS_REPORT.md  DEVELOPMENT_ROADMAP.md  FINAL_ARCHITECTURE_VERIFICATION.md  FINAL_COMPATIBILITY_REPORT.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GIT_WORKFLOW.md  IMPLEMENTATION_STATUS.md  LICENSE_APACHE_TEMPLATE.txt  MEDICAL_DISCLAIMER_TEMPLATE.md  PHASE_4_3_PLAN.md  PLAN_STRUCTURE_PROPOSAL.md  PRODUCTION_READY_REPORT.md  PRODUCTION_READY_RU.md  PR_DEPLOYMENT_REPORT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_DEPLOYMENT_RU.md  PR_DESCRIPTION_RU.md  PR_PHASE_4_2.md  PR_PHASE_4_2_AND_4_3.md  README.md  REALITY_CHECK.md  ROADMAP.md  SESSION_ANALYSIS.md  SIMPLIFICATION_SUMMARY.md  SPRINT1_SUMMARY.md  SPRINT2_SUMMARY.md  (+25 more)
pas_archive/: Dockerfile  Makefile  NEXT_STEPS.md  QUICKSTART.md  SETUP_GUIDE_MAC.md  implementation-plan-architector.md  main.py  pyproject.toml  pytest.ini
pas_archive/alembic/: env.py
pas_archive/config/guardrails/: rails.colang
pas_archive/config/langraph/: graph.yaml
pas_archive/dna/: GPT_openResolve.md  alienated_parent_support_bot_map.md
pas_archive/dna/chlid/: GPT_child_research001.md  (+1 more)
pas_archive/docs/: ARCHITECTURE.md  SOURCE_OF_TRUTH.md
pas_archive/system_specs/: Claude001.md  Claude002.md  Claude003.md  Claude004.md
pas_archive/tests/: __init__.py
(+227 files in other folders)
